--- a/dashboard/templates/predict_results.html
+++ b/dashboard/templates/predict_results.html
@@ -7,8 +7,8 @@
 </head>
 <body>
     <h1>Prediction Results</h1>
-    <p><strong>Linear Regression Prediction:</strong> {{ lr_prediction }}</p>
-    <p><strong>K-Means Cluster:</strong> {{ kmeans_cluster }}</p>
-    <a href="/predict_form">Go Back</a>
+    <p>Linear Regression Prediction: {{ lr_prediction }}</p>
+    <p>K-Means Cluster: {{ kmeans_cluster }}</p>
+    <a href="/predictions">Make Another Prediction</a>
 </body>
 </html>
