--- a/dashboard/templates/index.html
+++ b/dashboard/templates/index.html
@@ -13,7 +13,7 @@
             <ul>
                 <li><a href="/">Home</a></li>
                 <li><a href="/analysis">Video Analysis</a></li>
-                <li><a href="/predict">Make Prediction</a></li>
+                <li><a href="/prediction">Make Prediction</a></li>
             </ul>
         </nav>
     </header>
